[package]
name = "pwd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"]}
bcrypt = { version = "0.15.1"}
serde = { version = "1.0.152", features=['derive']}
confy = { version = "^0.5" }
edit-distance = "^2.1.0"
regex = "1.3.9"
